--- a/text-part3/cj.css
+++ b/text-part3/cj.css
@@ -1,6 +1,6 @@
 body {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-    font-size: 0.8em;
+    font-size: 1em;
 }
 
 h1 {
@@ -18,4 +18,21 @@ h2 {
     border-left: solid 5px #2f2bf1;
     /*左線*/
 }
-      
+
+pre {
+  /* background-color: #000000;
+  color: #ffffff; */
+  background-color: #f8f8f8;
+  border: 1px solid #cccccc;  
+  /* font-size: 13px; */
+  font-size: 1.2em;
+  line-height: 19px;
+  /* overflow: auto; */
+  padding: 6px 10px;
+  border-radius: 3px;
+}
+
+pre code, pre tt {
+    background-color: transparent;
+    border: none; 
+}
