--- a/text/cj.css
+++ b/text/cj.css
@@ -23,8 +23,8 @@ pre:after {
 
 /* ********************************* */
 body {
-  font-family: Helvetica, arial, sans-serif;
-  font-size: 14px;
+    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+    font-size: 1em;
   line-height: 1.6;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -291,11 +291,37 @@ pre code {
 pre {
   background-color: #f8f8f8;
   border: 1px solid #cccccc;
-  font-size: 13px;
+  /* font-size: 13px; */
   line-height: 19px;
-  overflow: auto;
+  /* overflow: auto; */
   padding: 6px 10px;
-  border-radius: 3px; }
-  pre code, pre tt {
-    background-color: transparent;
-    border: none; }
+  border-radius: 3px;
+}
+
+pre code, pre tt {
+  background-color: transparent;
+  border: none; 
+}
+
+body {
+    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+    font-size: 1em;
+}
+
+/* text.cssから持ってきた */
+
+h1 {
+    /*線の種類（実線） 太さ 色*/
+    border-bottom: solid 2px black;
+}
+
+h2 {
+    padding: 0.25em 0.5em;
+    /*上下 左右の余白*/
+    color: #494949;
+    /*文字色*/
+    background: transparent;
+    /*背景透明に*/
+    border-left: solid 5px #2f2bf1;
+    /*左線*/
+}
