--- a/text/cj.css
+++ b/text/cj.css
@@ -176,29 +176,38 @@ blockquote {
     margin-bottom: 0; }
 
 table {
-  padding: 0; }
-  table tr {
-    border-top: 1px solid #cccccc;
-    background-color: white;
-    margin: 0;
-    padding: 0; }
-    table tr:nth-child(2n) {
-      background-color: #f8f8f8; }
-    table tr th {
-      font-weight: bold;
-      border: 1px solid #cccccc;
-      text-align: left;
-      margin: 0;
-      padding: 6px 13px; }
-    table tr td {
-      border: 1px solid #cccccc;
-      text-align: left;
-      margin: 0;
-      padding: 6px 13px; }
-    table tr th :first-child, table tr td :first-child {
-      margin-top: 0; }
-    table tr th :last-child, table tr td :last-child {
-      margin-bottom: 0; }
+  padding: 0; 
+  border-collapse: collapse;
+}
+
+table tr {
+  border-top: 1px solid #cccccc;
+  background-color: white;
+  margin: 0;
+  padding: 0;   
+}
+table tr:nth-child(2n) {
+  background-color: #f8f8f8; 
+}
+table tr th {
+  font-weight: bold;
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px; 
+}
+table tr td {
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px; 
+}
+table tr th :first-child, table tr td :first-child {
+  margin-top: 0; 
+}
+table tr th :last-child, table tr td :last-child {
+  margin-bottom: 0; 
+}
 
 img {
   max-width: 100%; }
@@ -324,4 +333,12 @@ h2 {
     /*背景透明に*/
     border-left: solid 5px #2f2bf1;
     /*左線*/
+}
+
+.CopyButton{
+    float: right;
+    cursor: pointer;
+    border: 1px darkgray solid;
+    border-radius: 5px;
+    padding: 3px;
 }
