--- a/text-part2/cj.css
+++ b/text-part2/cj.css
@@ -36,3 +36,52 @@ pre code, pre tt {
     background-color: transparent;
     border: none; 
 }
+
+div.sourceCode{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.mytable{
+    /*display: table;*/
+    display: flex;
+    flex-direction: row;    
+}
+
+.mytd{
+    flex-grow: 1;
+    width: 48%;
+    padding-right: 1%;
+    /* float: left; */
+    /*display: table-cell;*/
+}
+
+.mytdh{
+    text-align: center;
+    width: 48%;    
+}
+
+.myiframe{
+    margin: auto;
+    width:100%;
+    /*height:300px;*/
+}
+
+.mtable{
+    border-collapse: collapse;
+}
+
+.mtable td{
+    border: 1px solid black;
+}
+
+.mtd{
+    width: 100px;
+    text-align: center;
+}
+
+.mytd{
+    width: 48%;
+    display: table-cell;
+}
+
