--- a/text/cj.css
+++ b/text/cj.css
@@ -102,7 +102,7 @@ h6 {
   color: #777777;
   font-size: 14px; }
 
-p, blockquote, ul, ol, dl, li, table, pre {
+p, blockquote, /*ul, ol, dl, li,*/ table, pre {
   margin: 15px 0; }
 
 hr {
