--- a/jigsaw/p3/index.css
+++ b/jigsaw/p3/index.css
@@ -7,54 +7,46 @@ header {
     background-color: #e1bfe2;
     align-items: center;
     position: fixed;
-  }
-   
+}
   
-  
-  #footer {
-      position: fixed;
-      background-color: #e1bfe2;
-      bottom: 0;
-      width: 100%;
-      height: 20px;
-    }
-
-
-
+#footer {
+    position: fixed;
+    background-color: #e1bfe2;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+}
 
 h1{
-    font-size:20px;}
-p.double-bottom {
-        border-bottom: double;
-        border-color: #9932cc;
-        }
-      
-        div.vertical-line{
-            width: 1px; /* Line width */
-            background-color: #9932cc; /* Line color */
-            height: 100%; /* Override in-line if you want specific height. */
-            float: left; 
-         /* Causes the line to float to left of content. 
-              You can instead use position:absolute or display:inline-block
-              if this fits better with your design */
-          }
-          div.vertical-line2{
-            width: 1px; /* Line width */
-            background-color: #9932cc; /* Line color */
-            height: 100%; /* Override in-line if you want specific height. */
-            float: right; 
-         /* Causes the line to float to left of content. 
-              You can instead use position:absolute or display:inline-block
-              if this fits better with your design */
-          }
+    font-size:20px;
+}
 
-        @media screen and(max-width: 480px) {
-            img {
-            border: 0;
-            }
-            }
-        @media screen and(min-width: 1280px) {
-            img {
-            border: 1px solid red;
-            }
-        }
+p.double-bottom {
+    border-bottom: double;
+    border-color: #9932cc;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+      
+div.vertical-line{
+    width: 1px; /* Line width */
+    background-color: #9932cc; /* Line color */
+    height: 100%; /* Override in-line if you want specific height. */
+    float: left; 
+}
+
+@media screen and(max-width: 480px) {
+    img {
+        border: 0;
+    }
+}
+@media screen and(min-width: 1280px) {
+    img {
+        border: 1px solid red;
+    }
+}
+
+.sanae1 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
