--- a/jigsaw/0316y/index.css
+++ b/jigsaw/0316y/index.css
@@ -1,11 +1,11 @@
-
-
-header {
-    display: flex;
-    width: 100%;
-    height: 40px;
+.title{
+    padding: 3px;
     background-color: #e1bfe2;
-    align-items: center;
+}
+
+.header {
+    width: 100%;
+    background-color: white;
     position: fixed;
 }
   
@@ -21,35 +21,10 @@ h1{
     font-size:20px;
 }
 
-p.double-bottom {
-    border-bottom: double;
-    border-color: #9932cc;
-    margin-top: 1px;
-    margin-bottom: 1px;
-}
-      
-div.vertical-line{
-    width: 1px; /* Line width */
-    background-color: #9932cc; /* Line color */
-    height: 100%; /* Override in-line if you want specific height. */
-    float: right; 
-}
 img {
-    border: 9px solid #8b008b;
+    border: 4px solid #8b008b;
     position: fixed;
     float: right; 
-}
-
-@media screen and(max-width: 480px) {
-    img {
-        
-        border: 0;
-    }
-}
-@media screen and(min-width: 1280px) {
-    img {
-        border: 1px solid red;
-    }
 }
 
 .sanae1 {
